# groovin

./: .README.md.swp  CMakeLists.txt  Groovin.maxproj  Makefile  README.md
abstractions/: sa.automenu.maxpat  sa.random_range.maxpat
code/: sa.gin.app.js  sa.gin.setup.js
data/: WOV.maxsnap
media/: groovin.graffle  groovin.icns
other/: readme.md
patchers/: 6Grid.maxpat  6SynchLFO.maxpat  BasicLFO.gendsp  ModMatrix.maxpat  demo.maxpat  groovin.maxpat  groovin.stereo.maxpat  groovin.stereo2.maxpat  groovin2.maxpat  groovin3.maxpat  groovin4.maxpat  groovin_1.maxpat  groovin_alt.maxpat  groovin_delay_bp.maxpat  groovin_filter_biquad_bp.maxpat  groovin_filter_cascade_bp.maxpat  groovin_filterbank_bp.maxpat  groovin_filterbank_mini_bp.maxpat  groovin_filterbank_mono_bp.maxpat  groovin_fsampler_bp.maxpat  groovin_granular2_bp.maxpat  groovin_granular_bp.maxpat  groovin_granular_bp_bak.maxpat  groovin_karma_bp.maxpat  groovin_ksample_min_bp.maxpat  groovin_ksampler_bp.maxpat  groovin_modular.maxpat  groovin_oscbank_bp.maxpat  groovin_reverb_bp.maxpat  groovin_reverb_h_bp.maxpat  groovin_sampler2_bp.maxpat  groovin_sampler_bp.maxpat  groovin_test.maxpat  groovin_xymixer2_bp.maxpat  groovin_xymixer_bp.maxpat  groovin_zsampler_bp.maxpat  grv_chan_grain1_bp.maxpat  grv_chan_grain2_bp.maxpat  grv_chan_grain_bp.maxpat  grv_chan_granulator_bp.maxpat  (+56 more)
scripts/: midi-twister.maxmap  rmq.sh
source/notes/: reverb-presets.xlsx  rhythm.md
source/projects/gigaverb_tilde/archive/: CMakeLists.txt
tests/: conf.yaml  hello.js  jstesting.js  lfo.maxpat  luatesting.lua  pdelay.maxpat  py.csd  test.maxpat  test_autopattr.maxpat  test_buckets.maxpat  test_coll_scales.maxpat  test_csound_py.maxpat  test_delay.maxpat  test_delay_gen.maxpat  test_delay_gen2.maxpat  test_delay_gen3.maxpat  test_delay_poly.maxpat  test_delay_taps.maxpat  test_dict.maxpat  test_filter_scale.maxpat  test_gen.maxpat  test_index.maxpat  test_js.maxpat  test_js_lua.maxpat  test_layout.maxpat  test_lfo.maxpat  test_live_menu.maxpat  test_lua_draw.maxpat  test_map.maxpat  test_mapping.maxpat  test_mc_pan.maxpat  test_modmatrix2.maxpat  test_mute.maxpat  test_new_routing.maxpat  test_open_patch.maxpat  test_pcontrol.maxpat  test_plugin_standalone.maxpat  test_py.maxpat  test_py2.maxpat  test_random_range.maxpat  (+11 more)
(+5 files in other folders)
